# point_cloud_classifier

./: .gitignore  CMakeLists.txt  README.md  config.json  package.xml  point_cloud_classifier_main.py  scheme_classifier.puml  setup.py
configs/: configs.rviz  configs_collision_zones.rviz
launch/: point_cloud_classifier.launch  point_cloud_classifier_map_maker.launch
msg/: PointsList.msg
src/: __init__.py  image_segmentator.py  input_point_cloud_classifier_adapter.py  json_to_mask.py  messages_creator.py  output_point_cloud_classifier_adapter.py  point_cloud_back_projector.py  point_cloud_classifier_accuracy_calculator.py  point_cloud_classifier_node.py  point_cloud_classifier_node_factory.py  point_cloud_classifier_tester.py  point_cloud_classifier_trainer.py  stones_dataset.py  transformer.py
src/criterions/: lovasz_losses.py  my_loss.py
src/models/: BranchedERFNet.py  __init__.py
src/utils/: __init__.py  generate_crops.py  utils.py
tmp/: build_point_cloud_classifier.sh  run_point_cloud_classifier.sh
